--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Slider</title>
-        <link rel="stylesheet" href="./css/style.css" />
+        <title>Tovuelist</title>
+        <link rel="stylesheet" href="./css/style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/dcdaab4f9f.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div id="app">
-
+            <div class="container">
+                <h1 class="text-center">Tovuelist</h1>
+                <ul class="list-group">
+                    <li class="list-group-item d-flex justify-content-between" v-for="chore, index in todoList" :key="index" :class="chore.done ? 'text-decoration-line-through' : ''">
+                        <div>{{chore.text}}</div>
+                        <div>
+                            <div class="btn" v-if="chore.done" @click="chore.done = !chore.done">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
+                            <div class="btn" v-if="!chore.done" @click="chore.done = !chore.done">
+                                <i class="fa-solid fa-xmark"></i>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
