--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1 class="text-center">Tovuelist</h1>
                 <ul class="list-group my-5">
                     <li class="list-group-item d-flex justify-content-between" v-for="chore, index in todoList" :key="index" :class="chore.done ? 'text-decoration-line-through' : ''">
-                        <div>{{chore.text}}</div>
+                        <div @click="chore.done = !chore.done">{{chore.text}}</div>
                         <div>
                             <div class="btn" @click="chore.done = !chore.done">
                                 <i class="fa-solid fa-check"></i>
@@ -33,7 +33,7 @@
                                 <label for="addField" class="form-label">More stuff came up?</label>
                             </div>
                             <div class="col-4">
-                                <input type="text" class="form-control" placeholder="Add a Task!" name="addField" v-model="addField">
+                                <input type="text" class="form-control" placeholder="Add a Task!" name="addField" v-model="addField" @keyup.enter="listAdd">
                             </div>
                             <div class="col-2">
                                 <div class="btn btn-success" @click="listAdd">Continue!</div>
